src/main/java/com/example/task/management/application/error/exception/InternalServerException.java
package com.example.task.management.application.error.exception;


public class InternalServerException extends RuntimeException{

    public InternalServerException(String message){
        super(message);
    }
}
